# FutamuraProjections

./: CMakeLists.txt  README.md  TuringMachineInterpreter.flowchart  compiled_turing.flowchart  compiler.flowchart  compiler.in  first_projection.in  main.cpp  mix.flowchart  mix_easy.in  mix_mix.in  mix_turing.in  second_projection.in  third_projection.in  turing.in
